test/errors/randomjunk.csmall
#include <stdio.h>

int main() {
	int a = 3;
	int b = 2;
	int c = 5; dit is random junk. 
	return 0;
}